Fix summary double scrollbar issue, mark rbr rows
Disable chart rendering again to allow release

--- a/css/fcviz.css
+++ b/css/fcviz.css
@@ -39,6 +39,14 @@ table.tooltip  td, td:first-child {
   padding: 2px 2px 2px 2px;
 }
 
+tr.odd.warning td, tr.even.warning td {
+  background-color: #f3edd2 ! important;
+}
+
+html[ng-app=fc] {
+  overflow-y: auto;
+}
+
 rect.fcviz, rect.int, rect.inactive { fill: #772d72; }
 
 rect.active, rect.fees { fill: #c7eefe; }
